--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -42,7 +42,12 @@
 }
 
 html, body {
-  width: 100%;
   height: 100%;
+  width: 100%;
+  min-width: 100%;
+  min-height: 100%;
+  margin: 0;
+  padding: 0;
+  overflow: auto;
   font-family: var(--font-inter);
 }
