--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -48,6 +48,6 @@ html, body {
   min-height: 100%;
   margin: 0;
   padding: 0;
-  overflow: auto;
+  overflow: hidden;
   font-family: var(--font-inter);
 }
